Fix double scroll bars in log point panel

--- a/packages/replay-next/components/sources/log-point-panel/LogPointPanel.module.css
+++ b/packages/replay-next/components/sources/log-point-panel/LogPointPanel.module.css
@@ -45,7 +45,7 @@
 .ContentWrapper,
 .ContentWrapperInvalid,
 .ContentWrapperTooManyPoints {
-  overflow: auto;
+  overflow: hidden;
   height: 100%;
   flex: 1;
   background-color: var(--point-panel-input-background-color);
